--- a/src/components/ModelS.astro
+++ b/src/components/ModelS.astro
@@ -30,7 +30,7 @@ import Section from './Section.astro'
     slot='background'
     alt='Model S'
     class='h-full w-full object-cover object-center'
-    src='/public/model-s.avif'
+    src='/model-s.avif'
     id='bg-image-models'
   />
 </Section>
@@ -52,8 +52,8 @@ import Section from './Section.astro'
   ) as HTMLImageElement // TypeScript
 
   if (isEdge()) {
-    imageElement.src = '/public/model-s.webp'
+    imageElement.src = '/model-s.webp'
   } else {
-    imageElement.src = '/public/model-s.avif'
+    imageElement.src = '/model-s.avif'
   }
 </script>
