--- a/src/components/ModelY.astro
+++ b/src/components/ModelY.astro
@@ -30,7 +30,7 @@ import Section from './Section.astro'
     slot='background'
     alt='Model Y'
     class='h-full w-full object-cover object-center bg-image'
-    src='/public/model-y.avif'
+    src='/model-y.avif'
     id='bg-image-modely'
   />
 </Section>
@@ -52,8 +52,8 @@ import Section from './Section.astro'
   ) as HTMLImageElement
 
   if (isEdge()) {
-    imageElement.src = '/public/model-y.webp'
+    imageElement.src = '/model-y.webp'
   } else {
-    imageElement.src = '/public/model-y.avif'
+    imageElement.src = '/model-y.avif'
   }
 </script>
