--- a/src/components/LandingHeader.astro
+++ b/src/components/LandingHeader.astro
@@ -49,7 +49,7 @@ import Logo from './Logo.astro'
     >
       <img
         class='text-black h-6'
-        src='/public/close-icon.svg'
+        src='/close-icon.svg'
         alt='close image'
       />
     </button>
@@ -64,7 +64,7 @@ import Logo from './Logo.astro'
           Home <img
             class='h-5'
             alt='arrow icon'
-            src='/public/arrow-icon.svg'
+            src='/arrow-icon.svg'
           /></a
         >
       </li>
@@ -75,7 +75,7 @@ import Logo from './Logo.astro'
           >Model S<img
             class='h-5'
             alt='arrow icon'
-            src='/public/arrow-icon.svg'
+            src='/arrow-icon.svg'
           /></a
         >
       </li>
@@ -86,7 +86,7 @@ import Logo from './Logo.astro'
           >Model 3<img
             class='h-5'
             alt='arrow icon'
-            src='/public/arrow-icon.svg'
+            src='/arrow-icon.svg'
           /></a
         >
       </li>
@@ -97,7 +97,7 @@ import Logo from './Logo.astro'
           >Model X<img
             class='h-5'
             alt='arrow icon'
-            src='/public/arrow-icon.svg'
+            src='/arrow-icon.svg'
           /></a
         >
       </li>
@@ -108,7 +108,7 @@ import Logo from './Logo.astro'
           >Model Y<img
             class='h-5'
             alt='arrow icon'
-            src='/public/arrow-icon.svg'
+            src='/arrow-icon.svg'
           /></a
         >
       </li>
@@ -119,7 +119,7 @@ import Logo from './Logo.astro'
           >Powerwall<img
             class='h-5'
             alt='arrow icon'
-            src='/public/arrow-icon.svg'
+            src='/arrow-icon.svg'
           /></a
         >
       </li>
@@ -130,7 +130,7 @@ import Logo from './Logo.astro'
           >Carga<img
             class='h-5'
             alt='arrow icon'
-            src='/public/arrow-icon.svg'
+            src='/arrow-icon.svg'
           /></a
         >
       </li>
